Sample output and typo.